--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,9 @@
             "php artisan key:generate"
         ],
         "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall"
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "php artisan clear-compiled",
+            "chmod -R 777 public/"
 
         ],
         "post-update-cmd": [
