--- a/composer.json
+++ b/composer.json
@@ -41,9 +41,7 @@
             "php artisan key:generate"
         ],
         "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan clear-compiled",
-            "chmod -R 777 public/"
+            "Illuminate\\Foundation\\ComposerScripts::postInstall"
 
         ],
         "post-update-cmd": [
